--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     }
     </script>
 
-    <!-- Google AdSense - Handles blocking gracefully -->
+    <!-- Google AdSense - Handles blocking gracefully without breaking app logic -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0274741291001288" 
             crossorigin="anonymous"
-            onerror="window.adsByGoogleBlocked=true; console.log('AdSense blocked by client settings');"></script>
+            onerror="window.adsByGoogleBlocked=true;"></script>
 
     <link rel="stylesheet" href="index.css">
     <script type="importmap">
