--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
     </script>
 
-    <!-- Google AdSense - Handles blocking gracefully without breaking app logic -->
+    <!-- Google AdSense - Silently handles blocking -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-0274741291001288" 
             crossorigin="anonymous"
             onerror="window.adsByGoogleBlocked=true;"></script>
