feat: Update favicons and manifest icons
Replaces flag-based icons with the Israel flag emoji from Noto Emoji for better consistency and broader emoji support. Updates favicons and manifest icons to use the new source.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <title>Flag Champion Pro - Learn World Flags</title>
     <meta name="description" content="The ultimate world flag quiz and study tool. Learn flags of all countries, track your progress, and challenge yourself with multi-language support.">
-    <link rel="icon" href="https://flagcdn.com/w80/il.png">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/googlefonts/noto-emoji@main/png/128/emoji_u1f1ee_1f1f1.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1e1b4b">
     
