feat: Update favicon and translate Pakistan
Updates the favicon URL to a newer Google Fonts CDN path.
Translates "Pakistan" to "פקיסטן" in the Urdu language strings to improve localization accuracy.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
     <title>Flag Champion Pro - Learn World Flags</title>
     <meta name="description" content="The ultimate world flag quiz and study tool. Learn flags of all countries, track your progress, and challenge yourself with multi-language support.">
-    <link rel="icon" href="https://cdn.jsdelivr.net/gh/googlefonts/noto-emoji@main/png/128/emoji_u1f1ee_1f1f1.png">
+    <link rel="icon" href="https://fonts.gstatic.com/s/e/notoemoji/latest/1f1ee_1f1f1/128.png">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1e1b4b">
     
@@ -44,5 +45,6 @@
 </head>
 <body class="theme-dark font-size-medium overflow-x-hidden min-h-screen">
     <div id="root"></div>
+    <script type="module" src="index.tsx"></script>
 </body>
 </html>
